--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -8,10 +8,25 @@ vignette: >
 ---
 
 ```{r, include = FALSE}
+library(spotifyr)
+
+credentials <- tryCatch(expr = {
+    list(token = spotifyr::get_spotify_access_token(), found = TRUE)
+  },
+  error = function(e) {
+    list(token = NA_character_, found = FALSE)
+  }
+)
+
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = credentials$found
 )
+```
+
+```{r eval=!credentials$found}
+message("No spotify credentials found. Subsequent code chunks will not be evaluated.")
 ```
 
 ## Generating a recommended song
@@ -30,10 +45,10 @@ a_song <- rec_song("pop", energy = 0.8)
 
 The objects returned by `rec_song()` are of the S3 class 'song'
 
-To generate the playlist, use the `get_playlist()` function. We'll retrieve a playlist using an argument for `genre` and `nsongs` which will be the number of songs you want in your playlist. We will retrieve a playlist for 5 songs.
+To generate the playlist, use the `rec_playlist()` function. We'll retrieve a playlist using an argument for `genre` and `nsongs` which will be the number of songs you want in your playlist. We will retrieve a playlist for 5 songs.
 
 ```{r}
-a_playlist <- get_playlist("pop", 5)
+a_playlist <- rec_playlist("pop", 5)
 ```
 
 ## Song Bank Data
